test: add keycloak