@@ -14,6 +14,7 @@ import org.springframework.security.oauth2.server.resource.authentication.JwtAut
 import org.springframework.security.web.SecurityFilterChain;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -33,18 +34,40 @@ public class KeycloakSecurityConfig {
     @Bean
     SecurityFilterChain keycloakSecurityFilterChain(HttpSecurity http,
                                                     JwtAuthenticationConverter jwtAuthenticationConverter) {
-        return http
-                // stateless REST api, credentials are carried by each request
-                .csrf(CsrfConfigurer::disable)
+        return http.csrf(CsrfConfigurer::disable)
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
-                        // POC : monitoring (actuator + SB admin) and api doc stay open
-                        .requestMatchers( // FIXME disable by default and override only in local and dev
-                                "/actuator/**", "/admin/**", "/swagger-ui/**",
-                                "/api-docs*", "/api-docs/**")
-                        .permitAll()
-                        // business request
-                        .anyRequest().authenticated()
+                        .requestMatchers("/actuator/health/liveness", "/actuator/health/readiness")
+                        .permitAll() // kube health check
+                        // every other actuator endpoint is ops material. With exposure.include "*"
+                        // this covers, among others :
+                        //   health          full health with details and components (db, disk, ...)
+                        //   info            build / env / git info
+                        //   metrics         micrometer meters, and prometheus if the registry is on the path
+                        //   env             environment and every property source, may leak secrets
+                        //   configprops     @ConfigurationProperties beans, may leak secrets
+                        //   beans           the whole spring bean graph
+                        //   conditions      auto-configuration condition report
+                        //   mappings        every @RequestMapping route
+                        //   loggers         read and change log levels at runtime
+                        //   threaddump      full jvm thread dump
+                        //   heapdump        downloadable heap dump, sensitive
+                        //   scheduledtasks  scheduled tasks
+                        //   caches          caches
+                        //   sbom            software bill of materials
+                        //   liquibase       applied changesets (liquibase is used here)
+                        // the SB admin ui is a graphical window on the very same data, so
+                        // it deserves the same ops-only treatment
+
+                        .requestMatchers("/actuator/**", "/admin/**")
+                        .hasRole("OPS") // the kube cluster must have OPS role.
+
+                        .requestMatchers("/swagger-ui/**", "/api-docs*", "/api-docs/**")
+                        .permitAll() // because of they are disabled by properties in prod
+
+                        // business endpoint
+                        .anyRequest()
+                        .authenticated()
                 )
                 .oauth2ResourceServer(oauth2 -> oauth2.jwt(
                         jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter)))
@@ -66,7 +89,7 @@ public class KeycloakSecurityConfig {
     private static Collection<GrantedAuthority> convertKeycloakToSpringSecurityRole(Jwt jwt) {
         Map<String, Object> realmAccess = jwt.getClaim("realm_access");
         if (realmAccess == null || !(realmAccess.get("roles") instanceof List<?> roles)) {
-            return List.of();
+            return Collections.emptyList();
         }
         return roles.stream()
                 .map(String::valueOf)
